k/coder/local/patch-service-coder.yaml
#ManagedBy: cue

apiVersion: v1
kind: Service
metadata:
  name: coder
  annotations:
    external-dns.alpha.kubernetes.io/hostname: coder.defn.run
spec:
  loadBalancerClass: tailscale
  type: LoadBalancer
