k/coder/local/resource-ingress-coder.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  annotations:
    cert-manager.io/cluster-issuer: zerossl-production
    external-dns.alpha.kubernetes.io/hostname: coder.defn.run
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: coder.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 80
  tls:
    - hosts:
        - coder.defn.run
      secretName: coder.defn.run
